--- a/mkt-project/package.json
+++ b/mkt-project/package.json
@@ -15,6 +15,8 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@tanstack/react-query": "^5.85.5",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2"
